--- a/css/home.css
+++ b/css/home.css
@@ -216,12 +216,28 @@ div.portfolio, div.address, div.schedule {
   border-bottom:3px solid #fff;
 }
 
+div.schedule {
+  grid-column: 1 / span 2;
+}
+
 div.schedule h1 {
   background-color: rgb(31, 130, 71);
 }
 
+div.schedule table {
+  margin: auto;
+  border: rgb(233, 179, 122);
+  padding: 1.6%;
+  vertical-align: bottom;
+}
+
 div.schedule table tr:nth-child(2n) {
   background-color: rgb(246, 102, 59);
+}
+
+div.schedule table .time {
+  color:#fff;
+  font-size: 2em;
 }
 
 div.schedule table #row-1 td:nth-child(n) {
@@ -246,5 +262,10 @@ div.schedule table #row-7 .algorithmic_design{
   background-color:rgb(0, 153, 255)
 }
 
+
+footer {
+  bottom: 0.5%;
+  background-color: aquamarine;
+}
 
 
