--- a/css/home.css
+++ b/css/home.css
@@ -229,6 +229,7 @@ div.schedule table {
   border: rgb(233, 179, 122);
   padding: 1.6%;
   vertical-align: bottom;
+ 
 }
 
 div.schedule table tr:nth-child(2n) {
@@ -262,10 +263,16 @@ div.schedule table #row-7 .algorithmic_design{
   background-color:rgb(0, 153, 255)
 }
 
+div.schedule table #englishA101, .web-development, .software-engineering,.algorithmic_design {
+  font-size: 2em;
+  font-family: "Josefin Sans";
+  text-align: center;
+}
+
 
 footer {
   bottom: 0.5%;
-  background-color: aquamarine;
+  background-color:rgb(246, 8, 8);
 }
 
 
