--- a/css/home.css
+++ b/css/home.css
@@ -106,6 +106,7 @@ div.navbar .div-with-links p a {
 
 div.navbar .div-with-links p a:hover {
   font-family: "Roboto Bold";
+  font-style:normal;
   font-size: 1.7em;
 }
 
@@ -161,6 +162,12 @@ div.portfolio h1,h2,ul {
 }
 
 
+div.portfolio, div.address, div.schedule {
+  border-right: 3px solid #fff;
+  border-bottom:3px solid #fff;
+}
+
+
 div.assignment-section-container {
   width: 100%;
 }
@@ -211,11 +218,6 @@ div.address a {
 }
 
 
-div.portfolio, div.address, div.schedule {
-  border-right: 3px solid #fff;
-  border-bottom:3px solid #fff;
-}
-
 div.schedule {
   grid-column: 1 / span 2;
 }
@@ -225,10 +227,11 @@ div.schedule h1 {
 }
 
 div.schedule table {
-  margin: auto;
-  border: rgb(233, 179, 122);
-  padding: 1.6%;
-  vertical-align: bottom;
+  margin-bottom: 5em;
+  border-color: rgb(240, 163, 64);
+  border-width: 1em;
+  padding: 2em 2em;
+  empty-cells:hide;
  
 }
 
@@ -266,13 +269,14 @@ div.schedule table #row-7 .algorithmic_design{
 div.schedule table #englishA101, .web-development, .software-engineering,.algorithmic_design {
   font-size: 2em;
   font-family: "Josefin Sans";
-  text-align: center;
+  vertical-align: top;
 }
 
 
-footer {
-  bottom: 0.5%;
-  background-color:rgb(246, 8, 8);
+ footer {
+  background-color: red;
+  height: 6%;
+  bottom: 0%;
 }
 
 
