--- a/css/home.css
+++ b/css/home.css
@@ -27,6 +27,11 @@ h1 {
   border-radius: 12em 1em 12em 1em;
   text-shadow: 2px 2px rgb(0, 0, 0);
   text-transform: uppercase;
+  transition: font-size 2s ease-in-out 1s;
+}
+
+h1:hover {
+  font-size: 0.3em;
 }
 
 ul, ol {
@@ -156,9 +161,19 @@ div.portfolio h1 {
   background-color: rgb(255, 140, 0);
 }
 
+div.portfolio h3 {
+  font-size: 1.5em;
+}
 
-div.portfolio h1,h2,ul {
+
+div.portfolio h1,h2,h3,ul {
   text-align: center;
+}
+
+div.portfolio p {
+  padding: 1%;
+  width: 50%;
+  margin: 0 auto;
 }
 
 
@@ -210,11 +225,15 @@ div.address {
   background-color: rgb(246, 8, 8);
 }
 
-div.address a {
-  background-color: aliceblue;
+div.address p {
+  text-align: center;
+  width: 100%;
+}
+
+div.address p a {
   width: fit-content;
-  font-family: Georgia;
-  
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
 }
 
 
@@ -231,7 +250,7 @@ div.schedule table {
   border-color: rgb(240, 163, 64);
   border-width: 1em;
   padding: 2em 2em;
-  empty-cells:hide;
+  empty-cells:show;
  
 }
 
@@ -273,8 +292,8 @@ div.schedule table #englishA101, .web-development, .software-engineering,.algori
 }
 
 
- footer {
-  background-color: red;
+footer {
+  background-color: rgb(128, 52, 129);
   height: 6%;
   bottom: 0%;
 }
