--- a/css/realestate.css
+++ b/css/realestate.css
@@ -34,7 +34,7 @@ body {
   width: 20%;
   padding: 2%;
   position: absolute;
-  left: 40%;
+  left: 10%;
   top: 20%;
   opacity:0.92;
   border: 5px solid rgb(5, 56, 111);
@@ -53,9 +53,9 @@ body {
 #div-with-table {
   width: 100%;
   position: absolute;
-  bottom: 10%;
   left: 40%;
   box-shadow: 2px 4px;
+  top: 20%;
   
 }
 
